deploy/ingress/canary/request-header/canary-ingress.yaml
# production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true" # enable canary 开启灰度发布
    nginx.ingress.kubernetes.io/canary-by-header: "version" # 根据request-header 来切分(version:v1.2.0)
    nginx.ingress.kubernetes.io/canary-by-header-value: "v1.2.0"
spec:
  rules:
  - host: echo.autumn.com
    http:
      paths:
      - backend:
          serviceName: canary
          servicePort: 80
